# ev-station-sim

./: .gitignore  404.html  LICENSE  README.md  SECURITY.md  index.html  mkdocs.yml  pyproject.toml
apps/simulation/: Dockerfile  mkdocs.yml  pyproject.toml
apps/simulation/docs/: index.md
apps/simulation/ev_charging/: station.py
docs/: getting_started.md  index.md
ev-charging-simulator-package/: index.html
ev-charging-station-assets/: index.html
getting_started/: index.html
libs/ev_station_assets/: mkdocs.yml  pyproject.toml
libs/ev_station_assets/docs/: index.md
libs/ev_station_assets/ev_station_assets/: assets.py
libs/ev_station_assets/ev_station_assets/abstract/: battery.py  electrolyzers.py  ev_chargers.py  generators.py  h2storage.py  onsite_loads.py
libs/ev_station_assets/tests/: __init__.py  test_asset_battery.py
